clang-tidy: Fix unnecessary copy of AtomicString each time one is logged <https://webkit.org/b/192710> <rdar://problem/46738962>

Reviewed by Eric Carlson.

* wtf/Logger.h:
(WTF::LogArgument::toString): Make argument a const reference to
avoid the copy.


Canonical link: https://commits.webkit.org/207298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239232 268f45cc-cd09-0410-ab3c-d52691b4dbfc